deployment/GreenFish-k8s/ingress/GreenFish-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: greenfish-ink

spec:
  controller: nginx.org/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenfish-ing

spec:
  ingressClassName: greenfish-ink

  rules:
    - host: going.test
      http:
          paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: greenfish-api-svc
                    port:
                      number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenfish-kic-dep
  namespace: nginx-ingress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: greenfish-kic-dep

  template:
    metadata:
      labels:
        app: greenfish-kic-dep

    spec:
      serviceAccountName: nginx-ingress

      hostNetwork: true

      containers:
        - image: nginx/nginx-ingress:2.2-alpine
          name: nginx-ingress
          args:
            - -ingress-class=greenfish-ink
